--- a/style.css
+++ b/style.css
@@ -1,37 +1,111 @@
-#container{
-    /* rozmiar całego kontenera */
-    width: 600px;
-    background-color: black;
-    margin: 0 auto;
+html, body{
+    height: 100%;
+    margin: 0;
+    padding: 0;     /*wew margines */
+}
+
+#container {
+    display: grid;
+    grid-template-columns: 1fr 1fr 1fr 1fr;     /*stosunek pustych przestrzeni / coś jak flex */
+    grid-template-rows: 2fr 1fr 1fr 1fr 1fr;
+    width: 50%;
+    height: 80%;
+    margin: 20px auto;
+    font: normal 28pt sans-serif;
+    color: white;
+    background-color: rgba(24, 111, 168, 0.795);
+    grid-gap: 3px;
+}
+
+#container > div {
+    background-color: rgba(105, 182, 233, 0.589);
     display: flex;
-    justify-content: space-evenly;
-    align-items: center;                    /* centrowanie w poziomie */
+    justify-content: center;
+    align-items: center;
 }
 
-#container > div{
-    background-color: aquamarine;
-    transition: all .3s linear;
-    /* rozmiary na stale */
-    height: 100px;
-    width: 100px;
+#container > div:hover {
+    background-color: rgba(128, 230, 224, 0.589);
 }
 
-/* dla II-go dziecka */
+#container > div:nth-child(1){
+    grid-row: 4;
+    grid-column: 1;
+}
+
 #container > div:nth-child(2){
-    background-color: deeppink;
-    height: 50px;
+    grid-row: 4;
+    grid-column: 2;
 }
 
-/* dla III-go dziecka */
 #container > div:nth-child(3){
-    background-color: goldenrod;
-    height: 75px;
+    grid-row: 4;
+    grid-column: 3;
 }
 
-/* animacja */
-#container > div:hover{
-    background-color: blueviolet;
-    width: 150px;
+#container > div:nth-child(4){
+    grid-row: 3;
+    grid-column: 1;
 }
 
-/* flex grow 1x, 2x, 3x */
+#container > div:nth-child(5){
+    grid-row: 3;
+    grid-column: 2;
+}
+
+#container > div:nth-child(6){
+    grid-row: 3;
+    grid-column: 3;
+}
+
+#container > div:nth-child(7){
+    grid-row: 2;
+    grid-column: 1;
+}
+
+#container > div:nth-child(8){
+    grid-row: 2;
+    grid-column: 2;
+}
+
+#container > div:nth-child(9){
+    grid-row: 2;
+    grid-column: 3;
+}
+
+#container > div:nth-child(10){
+    grid-row: 5;
+    grid-column: 1/3;               /* od 1 do 3 */
+}
+
+#container > div:nth-child(11){
+    grid-row: 2;
+    grid-column: 4;
+}
+
+#container > div:nth-child(12){
+    grid-row: 3;
+    grid-column: 4;
+}
+
+#container > div:nth-child(13){
+    grid-row: 4;
+    grid-column: 4;
+}
+
+#container > div:nth-child(14){
+    grid-row: 5;
+    grid-column: 4;
+}
+
+#container > div:nth-child(15){
+    grid-row: 5;
+    grid-column: 3;
+}
+
+#container > div:nth-child(16){
+    grid-row: 1;
+    grid-column: 1/5;
+}
+
+
